# smartass-subscriber

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: assign-author.yml  build.yml  docker.yml  quality.yml  tests.yml
app/: config.py  metrics.py  worker.py
app/activities/: calendar.py  state.py  telegram.py
app/workflows/: session_check.py
scripts/: register_schedule.py
src/: config.py  main.py
src/app/: dates.py
src/app/activities/: calendar.py  state.py  telegram.py
src/app/reset_state/: activities.py  workflow.py
src/app/session_check/: activities.py  workflow.py
src/app/session_check/mocks/: index.html
src/app/shared/: dates.py  models.py  state.py
src/app/workflows/: reset_state.py  session_check.py
src/smartass_subscriber/: worker.py
src/smartass_subscriber/activities/: calendar.py  state.py  telegram.py
src/smartass_subscriber/workflows/: session_check.py
src/temporal/: namespace.py  worker.py
tests/: test_parse_sessions.py
