[project]
name = "smartass-subscriber"
version = "0.1.0"
description = "Temporal cronjob: notify when smartass.club has Monday sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4[lxml]>=4.14.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "python-telegram-bot>=22.7",
    "temporalio>=1.26.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartass_subscriber"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
